--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -6,13 +6,144 @@
     android:layout_height="match_parent"
     tools:context="com.introtoandroid.calculator_bradley.CalculatorActivity">
 
-    <TextView
+    <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center"
+        android:columnCount="5"
+        android:rowCount="8"
+        android:orientation="horizontal" >
 
+        <Button
+            android:id="@+id/button3"
+            android:layout_row="4"
+            android:layout_column="2"
+            android:textSize="25sp"
+            android:text="3"  />
+
+        <TextView
+            android:id="@+id/operation"
+            android:layout_width="340dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_columnSpan="5"
+            android:textAlignment="textEnd"
+            android:text="0"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/button0"
+            android:layout_row="5"
+            android:layout_column="1"
+            android:textSize="25sp"
+            android:text="0" />
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:textSize="25sp"
+            android:text="1" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:textSize="25sp"
+            android:text="2" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:textSize="25sp"
+            android:text="4" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:textSize="25sp"
+            android:text="5" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:textSize="25sp"
+            android:text="6" />
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:textSize="25sp"
+            android:text="7" />
+
+        <Button
+            android:id="@+id/button8"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:textSize="25sp"
+            android:text="8" />
+
+        <Button
+            android:id="@+id/button9"
+            android:layout_row="2"
+            android:layout_column="2"
+            android:textSize="25sp"
+            android:text="9" />
+
+        <Button
+            android:id="@+id/buttonDiv"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:textSize="25sp"
+            android:text="/" />
+
+        <Button
+            android:id="@+id/buttonMult"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:textSize="25sp"
+            android:text="*" />
+
+        <Button
+            android:id="@+id/buttonEquals"
+            android:layout_row="2"
+            android:layout_column="3"
+            android:layout_rowSpan="5"
+            android:layout_gravity="fill"
+            android:layout_height="70dp"
+            android:textSize="25sp"
+            android:text="=" />
+
+        <Button
+            android:id="@+id/buttonCE"
+            android:layout_row="5"
+            android:layout_column="2"
+            android:textSize="25sp"
+            android:text="CE" />
+
+        <Button
+            android:id="@+id/buttonC"
+            android:layout_row="5"
+            android:layout_column="0"
+            android:textSize="25sp"
+            android:text="C" />
+
+        <Button
+            android:id="@+id/buttonPlus"
+            android:layout_row="1"
+            android:layout_column="3"
+            android:textSize="25sp"
+            android:text="+" />
+
+        <Button
+            android:id="@+id/buttonMinus"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:textSize="25sp"
+            android:text="-" />
+    </GridLayout>
 </android.support.constraint.ConstraintLayout>
